パスワード,メールアドレスの変更フロー

--- a/apps/api/src/mail/templates/change-email.hbs
+++ b/apps/api/src/mail/templates/change-email.hbs
@@ -1,5 +1,5 @@
 <p>
-  下記のリンクにアクセスして、メールアドレス変更の手続きを完了してください。
+  ログインした状態で、下記のリンクにアクセスして、メールアドレス変更の手続きを完了してください。
 </p>
 <p>
   <a href="{{ url }}">メールアドレス変更手続きを進める</a>
